add scripts.js and edit design section menu-burgers

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           />
         </div>
       </section>
-      <section id="menu-burgers" class=" flex flex-col items-center gap-y-24 my-20">
+      <section id="menu-burgers" class=" flex flex-col items-center gap-y-24 mt-36">
         <h2>100% Organic Burgers</h2>
         <div class=" w-[80dvw] flex justify-around flex-wrap gap-y-8 gap-x-4">
           <article>
@@ -118,6 +118,6 @@
       </section>
     </main>
     <!-- Include your JavaScript file -->
-    <script src="./scripts.js"></script>
+    <script src="./src/scripts.js"></script>
   </body>
 </html>
