--- a/index.html
+++ b/index.html
@@ -5,21 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome & Burger</title>
     <link rel="stylesheet" href="./dist/output.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header
-      class="bg-white/95 w-full h-24 sticky top-0 flex justify-evenly sm:justify-around"
+      class="bg-white/95 w-full h-24 sticky top-0 flex flex-col justify-center sm:flex-row sm:justify-around"
     >
-      <a href="#" class="flex justify-between items-center gap-x-2">
-        <div class="logo text-4xl mb-2">🍔</div>
-        <p class="text__logo">Chrome & Burger</p>
-      </a>
-      <nav class="h-24 flex items-center">
+      <div class="w-[90dvw] sm:w-auto flex items-center justify-between">
+        <a href="#" class="flex justify-between items-center gap-x-2">
+          <div class="logo text-4xl mb-2">🍔</div>
+          <p class="text__logo">Chrome & Burger</p>
+        </a>
+        <button
+          id="mobile-toggle"
+          class="flex items-center mt-1.5 sm:hidden"
+          onclick="toggleMobileMenu();"
+        >
+          <img src="./images/mobileToggle.svg" alt="Open Menu" />
+        </button>
+      </div>
+      <nav class="hidden sm:flex items-center">
         <ul
-          id="menu"
           class="w-72 h-24 hidden sm:flex sm:justify-around sm:items-center mt-1.5"
         >
           <li>
@@ -32,20 +43,27 @@
             <a href="#menu-burgers" class="btn-main">Order Now</a>
           </li>
         </ul>
-        <button
-          id="mobile-toggle"
-          class="flex items-center mt-1.5 sm:hidden"
-          onclick="toggleMobileMenu();"
-        >
-          <img src="./images/mobileToggle.svg" alt="Open Menu" />
-        </button>
+      </nav>
+      <nav class="relative block sm:hidden">
+        <ul id="menu" class="bg-white/95 absolute top-[1.5rem] w-full hidden">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#menu-burgers">Menu</a>
+          </li>
+          <li>
+            <a href="#menu-burgers">Order Now</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main class="flex flex-col justify-center items-center gap-y-12 py-[2.5%]">
-      <section class="flex flex-col flex-wrap justify-evenly gap-8 mx-4 sm:flex-row">
+      <section
+        class="flex flex-col flex-wrap justify-evenly gap-8 mx-4 sm:flex-row"
+      >
         <div
-          class="bg-maize p-8 flex flex-col justify-evenly
-          md:w-[28rem] md:h-[28rem] xl:w-[34rem] xl:h-[34rem] 2xl:w-[36rem] 2xl:h-[36rem]"
+          class="bg-maize p-8 flex flex-col justify-evenly md:w-[28rem] md:h-[28rem] xl:w-[34rem] xl:h-[34rem] 2xl:w-[36rem] 2xl:h-[36rem]"
         >
           <h1>Chrome & Burger</h1>
           <p class="my-4 md:my-0 text-justify">
@@ -67,15 +85,15 @@
           />
         </div>
       </section>
-      <section id="menu-burgers" class=" flex flex-col items-center gap-y-24 mt-36">
+      <section
+        id="menu-burgers"
+        class="flex flex-col items-center gap-y-24 mt-36"
+      >
         <h2>100% Organic Burgers</h2>
-        <div class=" w-[80dvw] flex justify-around flex-wrap gap-y-8 gap-x-4">
+        <div class="w-[80dvw] flex justify-around flex-wrap gap-y-8 gap-x-4">
           <article>
             <figure>
-              <img
-                src="./images/TheAllAmerican.jpeg"
-                alt="The All-American"
-              />
+              <img src="./images/TheAllAmerican.jpeg" alt="The All-American" />
             </figure>
             <h3>The All-American</h3>
             <p>
@@ -101,10 +119,7 @@
           </article>
           <article>
             <figure>
-              <img
-                src="./images/TheAlohaBurger.jpeg"
-                alt="The Aloha Burger"
-              />
+              <img src="./images/TheAlohaBurger.jpeg" alt="The Aloha Burger" />
             </figure>
             <h3>The Aloha Burger</h3>
             <p>
