--- a/index.html
+++ b/index.html
@@ -90,45 +90,55 @@
         class="flex flex-col items-center gap-y-24 mt-36"
       >
         <h2>100% Organic Burgers</h2>
-        <div class="w-[80dvw] flex justify-around flex-wrap gap-y-8 gap-x-4">
-          <article>
-            <figure>
-              <img src="./images/TheAllAmerican.jpeg" alt="The All-American" />
-            </figure>
-            <h3>The All-American</h3>
-            <p>
-              A timeless masterpiece featuring a juicy all-beef patty, melted
-              cheddar cheese, crisp lettuce, vine-ripened tomato, red onion,
-              tangy pickles, and our signature "Wagon Sauce" on a toasted
-              brioche bun.
-            </p>
-          </article>
-          <article>
-            <figure>
-              <img
-                src="./images/BaconCheeseburger.jpeg"
-                alt="Bacon Cheeseburger"
-              />
-            </figure>
-            <h3>Bacon Cheeseburger</h3>
-            <p>
-              This beauty boasts a juicy all-beef patty, crisp bacon, melted
-              cheddar cheese, crisp lettuce, vine-ripened tomato, red onion, and
-              tangy pickles, all on a toasted brioche bun.
-            </p>
-          </article>
-          <article>
-            <figure>
-              <img src="./images/TheAlohaBurger.jpeg" alt="The Aloha Burger" />
-            </figure>
-            <h3>The Aloha Burger</h3>
-            <p>
-              This tropical treat features a juicy all-beef patty topped with
-              grilled pineapple, melted Swiss cheese, crisp lettuce, tangy
-              teriyaki sauce, and a creamy sriracha mayo on a toasted Hawaiian
-              sweet roll.
-            </p>
-          </article>
+        <div class=" w-[80dvw] flex justify-center">
+          <div
+            class="grid-cols-1 grid lg:grid-cols-2 xl:grid-cols-3 gap-y-8 gap-x-4"
+          >
+            <article>
+              <figure>
+                <img
+                  src="./images/TheAllAmerican.jpeg"
+                  alt="The All-American"
+                />
+              </figure>
+              <h3>The All-American</h3>
+              <p>
+                A timeless masterpiece featuring a juicy all-beef patty, melted
+                cheddar cheese, crisp lettuce, vine-ripened tomato, red onion,
+                tangy pickles, and our signature "Wagon Sauce" on a toasted
+                brioche bun.
+              </p>
+            </article>
+            <article>
+              <figure>
+                <img
+                  src="./images/BaconCheeseburger.jpeg"
+                  alt="Bacon Cheeseburger"
+                />
+              </figure>
+              <h3>Bacon Cheeseburger</h3>
+              <p>
+                This beauty boasts a juicy all-beef patty, crisp bacon, melted
+                cheddar cheese, crisp lettuce, vine-ripened tomato, red onion,
+                and tangy pickles, all on a toasted brioche bun.
+              </p>
+            </article>
+            <article>
+              <figure>
+                <img
+                  src="./images/TheAlohaBurger.jpeg"
+                  alt="The Aloha Burger"
+                />
+              </figure>
+              <h3>The Aloha Burger</h3>
+              <p>
+                This tropical treat features a juicy all-beef patty topped with
+                grilled pineapple, melted Swiss cheese, crisp lettuce, tangy
+                teriyaki sauce, and a creamy sriracha mayo on a toasted Hawaiian
+                sweet roll.
+              </p>
+            </article>
+          </div>
         </div>
       </section>
     </main>
